--- a/public/index.html
+++ b/public/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>No Framework Website</title>
+  <title>Akrivia automation pvt lmtd</title>
 <link rel="stylesheet" href="./assets/styles/main.css">
 </head>
 <body>
   <div class="wrapper">
     <header>
-      <h1>No Framework Website</h1>
+      <h1>Akrivia automation pvt lmtd</h1>
     </header>
     <main>
-      <h2>This site rocks</h2>
+      <h2>Aws Deployments using Jenkins automation in Elasticbeanstalk</h2>
       <div class="bacon">
         <img src="./assets/images/oval.svg" alt="loading">
       </div>
