--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
     <header>
-      <h1>Akrivia automation pvt lmtd</h1>
+      <h1>HCM MANAGEMENT</h1>
     </header>
     <main>
       <h2>Aws Deployments using Jenkins automation in Elasticbeanstalk</h2>
